Start migration to tailwind css (page layouts)

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "build": "rollup -c",
+    "tailwind": "npx tailwindcss-cli@latest build -o static/css/tailwind.css",
     "watch": "npm-watch build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
