--- a/static/vercel.json
+++ b/static/vercel.json
@@ -1,5 +1,10 @@
 {
   "routes": [
-    { "src": "/([^/]+@[^/]+)", "dest": "/user.html" }
+    { "src": "/([^/]+@[^/]+)", "dest": "/user.html" },
+    { "src": "/forgot-password", "dest": "/forgot-password.html" },
+    { "src": "/login", "dest": "/login.html" },
+    { "src": "/notifications", "dest": "/notifications.html" },
+    { "src": "/search", "dest": "/search.html" },
+    { "src": "/signup", "dest": "/signup.html" }
   ]
 }
