--- a/static/vercel.json
+++ b/static/vercel.json
@@ -1,7 +1,7 @@
 {
   "routes": [
+    { "src": "/([^/]+@[^/]+)/ctzn.network/post/([^/]+)", "dest": "/post.html" },
     { "src": "/([^/]+@[^/]+)", "dest": "/user.html" },
-    { "src": "/([^/]+@[^/]+)/ctzn.network/post/:key", "dest": "/post.html" },
     { "src": "/forgot-password", "dest": "/forgot-password.html" },
     { "src": "/login", "dest": "/login.html" },
     { "src": "/notifications", "dest": "/notifications.html" },
