--- a/static/vercel.json
+++ b/static/vercel.json
@@ -1,6 +1,7 @@
 {
   "routes": [
     { "src": "/([^/]+@[^/]+)/ctzn.network/post/([^/]+)", "dest": "/post.html" },
+    { "src": "/([^/]+@[^/]+)/ctzn.network/comment/([^/]+)", "dest": "/comment.html" },
     { "src": "/([^/]+@[^/]+)", "dest": "/user.html" },
     { "src": "/forgot-password", "dest": "/forgot-password.html" },
     { "src": "/notifications", "dest": "/notifications.html" },
