--- a/static/vercel.json
+++ b/static/vercel.json
@@ -5,6 +5,7 @@
     { "src": "/([^/]+@[^/]+)", "dest": "/user.html" },
     { "src": "/forgot-password", "dest": "/forgot-password.html" },
     { "src": "/notifications", "dest": "/notifications.html" },
+    { "src": "/communities", "dest": "/communities.html" },
     { "src": "/search", "dest": "/search.html" },
     { "src": "/signup", "dest": "/signup.html" }
   ]
