Fix vercel config again

--- a/static/vercel.json
+++ b/static/vercel.json
@@ -3,72 +3,72 @@
     {
       "src": "/([^/]+@[^/]+)/ctzn.network/post/([^/]+)",
       "dest": "/index.html",
-      "headers": [
-        { "key": "Content-Security-Policy", "value": "script-src 'self' 'unsafe-inline'; style-src 'self'; font-src 'self';" }
-      ]
+      "headers": {
+        "Content-Security-Policy": "script-src 'self' 'unsafe-inline'; style-src 'self'; font-src 'self';"
+      }
     },
     {
       "src": "/([^/]+@[^/]+)/ctzn.network/comment/([^/]+)",
       "dest": "/index.html",
-      "headers": [
-        { "key": "Content-Security-Policy", "value": "script-src 'self' 'unsafe-inline'; style-src 'self'; font-src 'self';" }
-      ]
+      "headers": {
+        "Content-Security-Policy": "script-src 'self' 'unsafe-inline'; style-src 'self'; font-src 'self';"
+      }
     },
     {
       "src": "/([^/]+@[^/]+)/(.+)",
       "dest": "/index.html",
-      "headers": [
-        { "key": "Content-Security-Policy", "value": "script-src 'self' 'unsafe-inline'; style-src 'self'; font-src 'self';" }
-      ]
+      "headers": {
+        "Content-Security-Policy": "script-src 'self' 'unsafe-inline'; style-src 'self'; font-src 'self';"
+      }
     },
     {
       "src": "/([^/]+@[^/]+)",
       "dest": "/index.html",
-      "headers": [
-        { "key": "Content-Security-Policy", "value": "script-src 'self' 'unsafe-inline'; style-src 'self'; font-src 'self';" }
-      ]
+      "headers": {
+        "Content-Security-Policy": "script-src 'self' 'unsafe-inline'; style-src 'self'; font-src 'self';"
+      }
     },
     {
       "src": "/forgot-password",
       "dest": "/index.html",
-      "headers": [
-        { "key": "Content-Security-Policy", "value": "script-src 'self' 'unsafe-inline'; style-src 'self'; font-src 'self';" }
-      ]
+      "headers": {
+        "Content-Security-Policy": "script-src 'self' 'unsafe-inline'; style-src 'self'; font-src 'self';"
+      }
     },
     {
       "src": "/notifications",
       "dest": "/index.html",
-      "headers": [
-        { "key": "Content-Security-Policy", "value": "script-src 'self' 'unsafe-inline'; style-src 'self'; font-src 'self';" }
-      ]
+      "headers": {
+        "Content-Security-Policy": "script-src 'self' 'unsafe-inline'; style-src 'self'; font-src 'self';"
+      }
     },
     {
       "src": "/communities",
       "dest": "/index.html",
-      "headers": [
-        { "key": "Content-Security-Policy", "value": "script-src 'self' 'unsafe-inline'; style-src 'self'; font-src 'self';" }
-      ]
+      "headers": {
+        "Content-Security-Policy": "script-src 'self' 'unsafe-inline'; style-src 'self'; font-src 'self';"
+      }
     },
     {
       "src": "/account",
       "dest": "/index.html",
-      "headers": [
-        { "key": "Content-Security-Policy", "value": "script-src 'self' 'unsafe-inline'; style-src 'self'; font-src 'self';" }
-      ]
+      "headers": {
+        "Content-Security-Policy": "script-src 'self' 'unsafe-inline'; style-src 'self'; font-src 'self';"
+      }
     },
     {
       "src": "/search",
       "dest": "/index.html",
-      "headers": [
-        { "key": "Content-Security-Policy", "value": "script-src 'self' 'unsafe-inline'; style-src 'self'; font-src 'self';" }
-      ]
+      "headers": {
+        "Content-Security-Policy": "script-src 'self' 'unsafe-inline'; style-src 'self'; font-src 'self';"
+      }
     },
     {
       "src": "/signup",
       "dest": "/index.html",
-      "headers": [
-        { "key": "Content-Security-Policy", "value": "script-src 'self' 'unsafe-inline'; style-src 'self'; font-src 'self';" }
-      ]
+      "headers": {
+        "Content-Security-Policy": "script-src 'self' 'unsafe-inline'; style-src 'self'; font-src 'self';"
+      }
     }
   ]
 }
