Add the activity feed and composer to the home view

--- a/static/vercel.json
+++ b/static/vercel.json
@@ -43,6 +43,13 @@
       }
     },
     {
+      "src": "/activity",
+      "dest": "/index.html",
+      "headers": {
+        "Content-Security-Policy": "script-src 'self'; style-src 'self' 'unsafe-inline'; font-src 'self';"
+      }
+    },
+    {
       "src": "/communities",
       "dest": "/index.html",
       "headers": {
