Add search page to mobile

--- a/static/vercel.json
+++ b/static/vercel.json
@@ -22,7 +22,7 @@
       }
     },
     {
-      "src": "/([^/]+@[^/]+)",
+      "src": "/([^/]+@[^/]+)/?",
       "dest": "/index.html",
       "headers": {
         "Content-Security-Policy": "script-src 'self'; style-src 'self' 'unsafe-inline'; font-src 'self';"
